crates/compiler/src/tests/e2e/bad/0058_default_operator_unit_return_int32/main.gom
trait Default {
    fn default() -> Self;
}

impl Default for int32 {
    fn default() -> int32 { 0 }
}

fn main() {
    let x: int32 = Default::default();
    println(x.to_string());
}
